--- a/styles/style.css
+++ b/styles/style.css
@@ -51,6 +51,7 @@ section h1 {
   font-size: 18px;
   text-align: justify;
   text-justify: inter-word;
+  margin-top: 0%;
 }
 #about>p{
   width: 80%;
