--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -200,7 +200,7 @@ textarea:focus ~ .highlight {
     font-size: 20px;
     margin: 1%;
     font-weight: bold;
-    color: #004d4d;
+    color: #CD1E79;
   }
   .flip{
     text-align: center;
